--- a/apps/auth/.env.qa
+++ b/apps/auth/.env.qa
@@ -1,5 +1,5 @@
 COOKIE_DOMAIN=.klicker-qa.bf-app.ch
-NEXTAUTH_URL=https://auth.klicker.uzh.ch
+NEXTAUTH_URL=https://auth.klicker-qa.bf-app.ch
 EDUID_CLIENT_ID=uzh_klicker_auth_qa
 EDUID_WELL_KNOWN=https://login.test.eduid.ch/.well-known/openid-configuration
 NEXT_PUBLIC_EDUID_ID=eduid-test
