--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "@prisma/nextjs-monorepo-workaround-plugin": "5.18.0",
     "cross-env": "7.0.3",
     "husky": "8.0.3",
+    "prettier": "3.3.3",
+    "prettier-plugin-organize-imports": "4.0.0",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "standard-version": "9.5.0",
     "syncpack": "11.2.1",
-    "turbo": "2.0.12",
+    "turbo": "2.0.14",
+    "typescript": "5.4.5",
     "yaml": "2.3.2"
   },
   "scripts": {
@@ -78,7 +82,7 @@
     "node": "=20"
   },
   "volta": {
-    "node": "20.16.0",
+    "node": "20.17.0",
     "pnpm": "9.8.0"
   },
   "packageManager": "pnpm@9.8.0"
