--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["node_modules", "dist", "instrumented", "src/scripts"],
   "compilerOptions": {
     "baseUrl": ".",
+    "rootDir": ".",
     /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
