--- a/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
@@ -19,3 +19,4 @@ stringData:
   MIGRATION_SERVICE_BUS_CONNECTION_STRING: {{ .Values.migration.serviceBus.connectionString | quote }}
   MIGRATION_SECRET: {{ .Values.migration.secret | quote }}
   LISTMONK_PASS: {{ .Values.listmonk.password | quote }}
+  EMAIL_PASS: {{ .Values.email.password | quote }}
