--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -15,6 +15,15 @@ notifications:
   secret: ''
   supportEmail: ''
 
+email:
+  type: ''
+  from: ''
+  host: ''
+  port: ''
+  username: ''
+  password: ''
+  secure: ''
+
 eduId:
   clientSecret: ''
 
