ci: deploy migration functions only if their files change

--- a/.github/workflows/v3_klickeruzhprod-migration-export.yml
+++ b/.github/workflows/v3_klickeruzhprod-migration-export.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - 'v3'
-    # paths:
-    #   - 'apps/func-migration-v2-export/**'
-    #   - '.github/workflows/v3_klickeruzhprod-migration-export**'
+    paths:
+      - 'apps/func-migration-v2-export/**'
+      - '.github/workflows/v3_klickeruzhprod-migration-export**'
   workflow_dispatch:
 
 env:
