ci: add more paths to ci workflows

--- a/.github/workflows/check-types.yml
+++ b/.github/workflows/check-types.yml
@@ -3,9 +3,15 @@ name: Check typescript types
 on:
   push:
     branches: ['v3', 'v3*']
+    paths:
+      - apps/**
+      - packages/**
   pull_request:
     # branches: ["v3", "v3*"]
     types: [opened, synchronize, reopened]
+    paths:
+      - apps/**
+      - packages/**
 
 env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
