--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -80,6 +80,7 @@
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
     "prisma:studio:raw": "prisma studio --schema=src/prisma/schema",
     "script": "ENV=development doppler run --config dev -- tsx",
+    "script:qa": "ENV=development doppler run --config stg -- tsx",
     "script:prod": "ENV=production doppler run --config prd -- tsx",
     "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
     "seed:achievements": "ENV=development doppler run --config dev tsx src/data/seedAchievements.ts",
