--- a/.github/workflows/v3_backend-docker.yml
+++ b/.github/workflows/v3_backend-docker.yml
@@ -13,6 +13,7 @@ on:
       - '.github/workflows/v3_backend-docker**'
   pull_request:
     # branches: [ "v3" ]
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'apps/backend-docker/**'
       - 'packages/graphql/**'
@@ -25,6 +26,7 @@ env:
 
 jobs:
   build:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     permissions:
       contents: read
