--- a/.github/workflows/v3_lti-qa.yml
+++ b/.github/workflows/v3_lti-qa.yml
@@ -11,6 +11,7 @@ on:
       - '.github/workflows/v3_lti**'
   pull_request:
     # branches: [ "v3" ]
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'apps/lti/**'
       - '.github/workflows/v3_lti**'
@@ -21,6 +22,7 @@ env:
 
 jobs:
   build:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     permissions:
       contents: read
