--- a/.github/workflows/v3_frontend-manage-docker-qa.yml
+++ b/.github/workflows/v3_frontend-manage-docker-qa.yml
@@ -10,6 +10,7 @@ on:
       - '.github/workflows/v3_frontend-manage**'
   pull_request:
     # branches: [ "v3" ]
+    types: [opened, synchronize, reopened, ready_for_review]
     paths:
       - 'apps/frontend-manage/**'
       - '.github/workflows/v3_frontend-manage**'
@@ -20,6 +21,7 @@ env:
 
 jobs:
   build:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     permissions:
       contents: read
