fix: add EMAIL_STARTTLS config to authenticate with STARTTLS when sending via smtp

--- a/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
@@ -28,6 +28,7 @@ data:
   EMAIL_PORT: {{ .Values.email.port | quote }}
   EMAIL_USER: {{ .Values.email.username | quote }}
   EMAIL_SECURE: {{ .Values.email.secure | quote }}
+  EMAIL_STARTTLS: {{ .Values.email.requireTLS | quote }}
   {{- if .Values.backendGraphql.redisCache.tls }}
   REDIS_CACHE_TLS: {{ .Values.backendGraphql.redisCache.tls | quote }}
   {{ end }}
