--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -22,7 +22,8 @@ email:
   port: ''
   username: ''
   password: ''
-  secure: ''
+  secure: 'false'
+  requireTLS: 'true'
 
 eduId:
   clientSecret: ''
