--- a/deploy/env-qa-v3/helmfile.yaml
+++ b/deploy/env-qa-v3/helmfile.yaml
@@ -24,6 +24,7 @@ releases:
             username: '{{ requiredEnv "EMAIL_USER" }}'
             password: '{{ requiredEnv "EMAIL_PASS" }}'
             secure: '{{ requiredEnv "EMAIL_SECURE" }}'
+            requireTLS: '{{ requiredEnv "EMAIL_STARTTLS" }}'
 
         auth:
           replicaCount: 1
