--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -8,12 +8,14 @@
   "files": [
     "dist"
   ],
+  "peerDependencies": {
+    "@klicker-uzh/transactional": "workspace:*"
+  },
   "dependencies": {
     "@azure/service-bus": "7.9.0",
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
-    "@klicker-uzh/transactional": "workspace:*",
     "@klicker-uzh/util": "workspace:*",
     "@pothos/core": "3.38.0",
     "@pothos/plugin-directives": "3.10.2",
