chore(apps/frontend-pwa): make availability of magic link dependent on env var

--- a/apps/frontend-pwa/.env.development
+++ b/apps/frontend-pwa/.env.development
@@ -11,3 +11,5 @@ NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BKgVsZFXdusxzKMrOTIJiAtiou8STnRcwbv_nvlseghjAUA
 NEXT_PUBLIC_PWA_URL="http://pwa.klicker.com"
 NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.com"
 NEXT_PUBLIC_CONTROL_URL="http://control.klicker.com"
+
+NEXT_PUBLIC_WITH_MAGIC_LINK=true
