--- a/apps/frontend-pwa/.env.test
+++ b/apps/frontend-pwa/.env.test
@@ -13,3 +13,5 @@ APP_SECRET=abcd
 NEXT_PUBLIC_PWA_URL="http://127.0.0.1:3001"
 NEXT_PUBLIC_MANAGE_URL="http://127.0.0.1:3002"
 NEXT_PUBLIC_CONTROL_URL="http://127.0.0.1:3003"
+
+NEXT_PUBLIC_WITH_MAGIC_LINK=true
