--- a/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
@@ -7,6 +7,9 @@ metadata:
     {{- include "chart.labels" . | nindent 4 }}
 data:
   API_DOMAIN: {{ .Values.backendGraphql.apiDomain | quote }}
+  APP_MANAGE_DOMAIN: {{ .Values.backendGraphql.appManageDomain | quote }}
+  APP_STUDENT_DOMAIN: {{ .Values.backendGraphql.appStudentDomain | quote }}
+  APP_CONTROL_DOMAIN: {{ .Values.backendGraphql.appControlDomain | quote }}
   APP_MANAGE_SUBDOMAIN: {{ .Values.backendGraphql.appManageSubdomain | quote }}
   APP_STUDENT_SUBDOMAIN: {{ .Values.backendGraphql.appStudentSubdomain | quote }}
   APP_CONTROL_SUBDOMAIN: {{ .Values.backendGraphql.appControlSubdomain | quote }}
