--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -77,6 +77,13 @@ releases:
           cookieDomain: '{{ requiredEnv "COOKIE_DOMAIN" }}'
           databaseUrl: '{{ requiredEnv "DATABASE_URL" }}'
 
+          appManageSubdomain: '{{ requiredEnv "APP_MANAGE_SUBDOMAIN" }}'
+          appManageDomain: '{{ requiredEnv "APP_MANAGE_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+          appStudentSubdomain: '{{ requiredEnv "APP_STUDENT_SUBDOMAIN" }}'
+          appStudentDomain: '{{ requiredEnv "APP_STUDENT_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+          appControlSubdomain: '{{ requiredEnv "APP_CONTROL_SUBDOMAIN" }}'
+          appControlDomain: '{{ requiredEnv "APP_CONTROL_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+
           notifications:
             url: '{{ requiredEnv "NOTIFICATION_URL" }}'
             secret: '{{ requiredEnv "NOTIFICATION_SECRET" }}'
