--- a/deploy/env-qa-v3/helmfile.yaml
+++ b/deploy/env-qa-v3/helmfile.yaml
@@ -57,6 +57,13 @@ releases:
           databaseUrl: '{{ requiredEnv "DATABASE_URL" }}'
           debug: true
 
+          appManageSubdomain: '{{ requiredEnv "APP_MANAGE_SUBDOMAIN" }}'
+          appManageDomain: '{{ requiredEnv "APP_MANAGE_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+          appStudentSubdomain: '{{ requiredEnv "APP_STUDENT_SUBDOMAIN" }}'
+          appStudentDomain: '{{ requiredEnv "APP_STUDENT_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+          appControlSubdomain: '{{ requiredEnv "APP_CONTROL_SUBDOMAIN" }}'
+          appControlDomain: '{{ requiredEnv "APP_CONTROL_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+
           notifications:
             url: '{{ requiredEnv "NOTIFICATION_URL" }}'
             secret: '{{ requiredEnv "NOTIFICATION_SECRET" }}'
