--- a/deploy/env-qa-v3/helmfile.yaml
+++ b/deploy/env-qa-v3/helmfile.yaml
@@ -58,11 +58,11 @@ releases:
           debug: true
 
           appManageSubdomain: '{{ requiredEnv "APP_MANAGE_SUBDOMAIN" }}'
-          appManageDomain: '{{ requiredEnv "APP_MANAGE_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+          appManageDomain: '{{ requiredEnv "APP_MANAGE_SUBDOMAIN" }}{{ requiredEnv "COOKIE_DOMAIN" }}'
           appStudentSubdomain: '{{ requiredEnv "APP_STUDENT_SUBDOMAIN" }}'
-          appStudentDomain: '{{ requiredEnv "APP_STUDENT_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+          appStudentDomain: '{{ requiredEnv "APP_STUDENT_SUBDOMAIN" }}{{ requiredEnv "COOKIE_DOMAIN" }}'
           appControlSubdomain: '{{ requiredEnv "APP_CONTROL_SUBDOMAIN" }}'
-          appControlDomain: '{{ requiredEnv "APP_CONTROL_SUBDOMAIN" }}.{{ requiredEnv "COOKIE_DOMAIN" }}'
+          appControlDomain: '{{ requiredEnv "APP_CONTROL_SUBDOMAIN" }}{{ requiredEnv "COOKIE_DOMAIN" }}'
 
           notifications:
             url: '{{ requiredEnv "NOTIFICATION_URL" }}'
