fix(packages/graphql): rework email templating approach to include html files in graphql dist, improve env variable usage

--- a/turbo.json
+++ b/turbo.json
@@ -2,10 +2,13 @@
   "$schema": "https://turborepo.org/schema.json",
   "globalEnv": [
     "API_DOMAIN",
+    "APP_CONTROL_DOMAIN",
     "APP_CONTROL_SUBDOMAIN",
+    "APP_MANAGE_DOMAIN",
     "APP_MANAGE_SUBDOMAIN",
-    "APP_SECRET",
+    "APP_STUDENT_DOMAIN",
     "APP_STUDENT_SUBDOMAIN",
+    "APP_SECRET",
     "AZUREWEBJOBSFEATUREFLAGS",
     "AZUREWEBJOBSSTORAGE",
     "BLOB_STORAGE_ACCESS_KEY",
