chore(apps/frontend-pwa): add NEXT_PUBLIC_WITH_MAGIC_LINK to dockerfile args

--- a/apps/frontend-pwa/Dockerfile
+++ b/apps/frontend-pwa/Dockerfile
@@ -42,6 +42,7 @@ ARG NEXT_PUBLIC_CONTROL_URL
 ARG NEXT_PUBLIC_MATOMO_URL
 ARG NEXT_PUBLIC_MATOMO_ID
 ARG BLOB_STORAGE_ACCOUNT_URL
+ARG NEXT_PUBLIC_WITH_MAGIC_LINK
 
 ENV NEXT_TELEMETRY_DISABLED 1
 
