cleaning of prettier deps and config files

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,18 @@
 cypress/e2e/
+node_modules/
+.next/
+.turbo/
+.vercel/
+dist/
+out/
+build/
+email/
+
+ops.schema.json
+ops.ts
+schema.graphql
+nexus-typegen.ts
+client.json
+server.json
+
+*.sql
