--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@prisma/nextjs-monorepo-workaround-plugin": "5.18.0",
     "cross-env": "7.0.3",
+    "eslint-config-prettier": "9.1.0",
     "husky": "8.0.3",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.0.0",
