--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -48,7 +48,6 @@
     "@graphql-tools/utils": "10.0.6",
     "@graphql-typed-document-node/core": "3.2.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
-    "@klicker-uzh/transactional": "workspace:*",
     "@parcel/watcher": "2.2.0",
     "@size-limit/preset-small-lib": "8.2.4",
     "@types/bcryptjs": "^2.4.2",
@@ -83,13 +82,12 @@
   },
   "scripts": {
     "analyze": "size-limit --why",
-    "build": "cross-env NODE_ENV=production run-s generate build:copy build:ts",
+    "build": "cross-env NODE_ENV=production run-s generate build:ts",
     "build:ts": "tsup --dts",
-    "build:copy": "tsx src/copy.ts",
     "build:test": "run-s build:instrument build",
     "build:instrument": "nyc instrument --compact=false src instrumented",
     "check": "tsc --noEmit",
-    "dev": "npm-run-all --parallel build:copy dev:graphql dev:ts",
+    "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:test": "pnpm run dev",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
