chore: add env variables for lti dev mode and ltiaas

--- a/deploy/charts/klicker-uzh-v2/templates/cm-lti.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-lti.yaml
@@ -20,3 +20,5 @@ data:
   LTI_TOKEN_ENDPOINT: {{ .Values.lti.tokenEndpoint | quote }}
   LTI_KEYS_ENDPOINT: {{ .Values.lti.keysEndpoint | quote }}
   COOKIE_DOMAIN: {{ .Values.lti.cookieDomain | quote }}
+  LTI_DEV_MODE: {{ .Values.lti.devMode | quote }}
+  LTI_AAS_MODE: {{ .Values.lti.ltiaas | quote }}
