deploy: use APP_VERSION when deploying lti

--- a/deploy/env-qa-v3/helmfile.yaml
+++ b/deploy/env-qa-v3/helmfile.yaml
@@ -90,6 +90,9 @@ releases:
         lti:
           replicaCount: 1
 
+          image:
+            tag: '{{ requiredEnv "APP_VERSION" }}'
+
           appSecret: '{{ requiredEnv "APP_SECRET" }}'
           clientId: '{{ requiredEnv "LTI_CLIENT_ID" }}'
           redirectURL: '{{ requiredEnv "LTI_REDIRECT_URL" }}'
