--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -19,7 +19,6 @@
     "@graphql-yoga/redis-event-target": "1.0.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
-    "@klicker-uzh/transactional": "workspace:*",
     "@opentelemetry/exporter-trace-otlp-http": "0.52.1",
     "@opentelemetry/instrumentation": "0.52.1",
     "@opentelemetry/resources": "1.25.1",
@@ -76,13 +75,12 @@
     "typescript": "5.4.5"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production run-s build:copy build:ts",
+    "build": "cross-env NODE_ENV=production run-s build:ts",
     "build:ts": "tsup",
-    "build:copy": "tsx scripts/copy.ts",
     "build:test": "run-s build:instrument build:ts",
     "build:instrument": "nyc instrument --compact=false src instrumented",
     "check": "tsc --noEmit",
-    "dev": "npm-run-all --parallel build:copy dev:build dev:run",
+    "dev": "npm-run-all --parallel dev:build dev:run",
     "dev:lti": "pnpm run dev",
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:build": "tsup --watch",
