fix(deploy): update app version of lti for prod deployment

--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -109,6 +109,9 @@ releases:
           sentryDSN: '{{ env "SENTRY_DSN" }}'
 
         lti:
+          image:
+            tag: '{{ requiredEnv "APP_VERSION" }}'
+
           appSecret: '{{ requiredEnv "APP_SECRET" }}'
           clientId: '{{ requiredEnv "LTI_CLIENT_ID" }}'
           redirectURL: '{{ requiredEnv "LTI_REDIRECT_URL" }}'
