--- a/apps/analytics/pyproject.toml
+++ b/apps/analytics/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "@klicker_uzh"}]
 python = "^3.12"
 pandas = "2.2.2"
 prisma = "0.14.0"
+xlsxwriter = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 poethepoet = "0.27.0"
