--- a/.github/workflow_drafts/v2_frontend-manage.yml
+++ b/.github/workflow_drafts/v2_frontend-manage.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - v2
     paths:
-      - "apps/frontend-manage/**"
-      - ".github/workflows/v2_frontend-manage**"
+      - 'apps/frontend-manage/**'
+      - '.github/workflows/v2_frontend-manage**'
   workflow_dispatch:
 
 env:
@@ -30,6 +30,6 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
           github-token: ${{ secrets.GITHUB_TOKEN }} #Optional
           vercel-args: '--prod --force' #Optional
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}  #Required
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID}} #Required
           vercel-project-id: ${{ secrets.VERCEL_FRONTEND_MANAGE_ID}} #Required
           working-directory: ${{ env.APP_PATH }}
