--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -23,10 +23,6 @@
     "composite": true,
     "declarationMap": true,
     /* If your code runs in the DOM: */
-    "lib": [
-      "es2022",
-      "dom",
-      "dom.iterable"
-    ],
+    "lib": ["es2022", "dom", "dom.iterable"]
   }
 }
