--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "dev:migration": "doppler run --config dev -- turbo run dev:migration",
     "dev:offline": "doppler run --config dev -- turbo run dev:offline",
     "dev:test": "cross-env NODE_ENV=test turbo run dev:test",
-    "format": "turbo run format --parallel --continue",
-    "format:check": "turbo run format:check --parallel --continue",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "turbo run lint --parallel --continue",
     "prepare": "husky install",
     "prisma:deploy": "pnpm run --filter @klicker-uzh/prisma prisma:deploy",
