--- a/.github/workflow_drafts/chart-release.yml
+++ b/.github/workflow_drafts/chart-release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           CR_SKIP_EXISTING: false
         with:
           charts_dir: deploy/charts
