--- a/util/traefik/rules_docker.yaml
+++ b/util/traefik/rules_docker.yaml
@@ -1,79 +1,79 @@
 http:
   routers:
     api:
-      rule: "Host(`api.klicker.com`)"
+      rule: 'Host(`api.klicker.com`)'
       entrypoints:
-        - "web"
-      service: "api"
+        - 'web'
+      service: 'api'
 
     pwa:
-      rule: "Host(`pwa.klicker.com`)"
+      rule: 'Host(`pwa.klicker.com`)'
       entrypoints:
-        - "web"
-      service: "pwa"
+        - 'web'
+      service: 'pwa'
 
     manage:
-      rule: "Host(`manage.klicker.com`)"
+      rule: 'Host(`manage.klicker.com`)'
       entrypoints:
-        - "web"
-      service: "manage"
+        - 'web'
+      service: 'manage'
 
     control:
-      rule: "Host(`control.klicker.com`)"
+      rule: 'Host(`control.klicker.com`)'
       entrypoints:
-        - "web"
-      service: "control"
+        - 'web'
+      service: 'control'
 
     auth:
-      rule: "Host(`auth.klicker.com`)"
+      rule: 'Host(`auth.klicker.com`)'
       entrypoints:
-        - "web"
-      service: "auth"
+        - 'web'
+      service: 'auth'
 
     func-responses:
-      rule: "Host(`func-responses.klicker.com`)"
+      rule: 'Host(`func-responses.klicker.com`)'
       entrypoints:
-        - "web"
-      service: "func-responses"
+        - 'web'
+      service: 'func-responses'
 
     func-response-processor:
-      rule: "Host(`func-response-processor.klicker.com`)"
+      rule: 'Host(`func-response-processor.klicker.com`)'
       entrypoints:
-        - "web"
-      service: "func-response-processor"
+        - 'web'
+      service: 'func-response-processor'
 
   services:
     api:
       loadBalancer:
         servers:
-          - url: "http://host.docker.internal:3000"
+          - url: 'http://host.docker.internal:3000'
 
     pwa:
       loadBalancer:
         servers:
-          - url: "http://host.docker.internal:3001"
+          - url: 'http://host.docker.internal:3001'
 
     manage:
       loadBalancer:
         servers:
-          - url: "http://host.docker.internal:3002"
+          - url: 'http://host.docker.internal:3002'
 
     control:
       loadBalancer:
         servers:
-          - url: "http://host.docker.internal:3003"
+          - url: 'http://host.docker.internal:3003'
 
     auth:
       loadBalancer:
         servers:
-          - url: "http://host.docker.internal:3010"
+          - url: 'http://host.docker.internal:3010'
 
     func-responses:
       loadBalancer:
         servers:
-          - url: "http://host.docker.internal:7072"
+          - url: 'http://host.docker.internal:7072'
 
     func-response-processor:
       loadBalancer:
         servers:
-          - url: "http://host.docker.internal:7073"
+          - url: 'http://host.docker.internal:7073'
