wip: implement database scheme and first version of creation forms for new course group settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
   },
   "prettier.requireConfig": true,
   "prettier.useEditorConfig": false,
-  "prettier.configPath": "${workspaceFolder}/.prettierrc.js",
+  "prettier.configPath": ".prettierrc.mjs",
   "prettier.resolveGlobalModules": true,
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
