--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "5.18.0"
   },
   "devDependencies": {
+    "@klicker-uzh/transactional": "workspace:*",
     "@pothos/plugin-prisma": "3.60.0",
     "@size-limit/preset-small-lib": "8.2.4",
     "@types/bcryptjs": "^2.4.2",
