--- a/turbo.json
+++ b/turbo.json
@@ -50,6 +50,8 @@
     "LTI_ENCRYPTION_KEY",
     "LTI_PORT",
     "LTI_REDIRECT_URL",
+    "LTI_DEV_MODE",
+    "LTI_AAS_MODE",
     "NODE_ENV",
     "NOTIFICATION_SECRET",
     "NOTIFICATION_SUPPORT_MAIL",
