--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -4,6 +4,8 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "devDependencies": {
+    "@klicker-uzh/graphql": "workspace:*",
+    "@klicker-uzh/markdown": "workspace:*",
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
@@ -18,17 +20,19 @@
     "lodash": "4.17.21",
     "npm-run-all": "4.1.5",
     "postcss-import": "16.1.0",
+    "recharts": "2.7.2",
+    "remark-parse": "10.0.2",
+    "remark-slate": "1.8.6",
     "tailwindcss": "3.4.9",
     "tailwindcss-radix": "3.0.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "unified": "10.1.2"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-regular-svg-icons": "6.6.0",
     "@fortawesome/free-solid-svg-icons": "6.6.0",
     "@fortawesome/react-fontawesome": "0.2.2",
-    "@klicker-uzh/graphql": "workspace:*",
-    "@klicker-uzh/markdown": "workspace:*",
     "@uzh-bf/design-system": "3.0.0-alpha.22",
     "dayjs": "1.11.12",
     "formik": "2.4.6",
@@ -38,11 +42,7 @@
     "next-intl": "3.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "recharts": "2.7.2",
-    "remark-parse": "10.0.2",
-    "remark-slate": "1.8.6",
     "tailwind-merge": "2.4.0",
-    "unified": "10.1.2",
     "yup": "1.2.0"
   },
   "scripts": {
