--- a/.github/workflows/cypress-testing.yml
+++ b/.github/workflows/cypress-testing.yml
@@ -2,16 +2,21 @@ name: Klicker automated testing with cypress
 on:
   push:
     branches: ['v3', 'v3*']
+    paths:
+      - apps/**
+      - packages/**
   pull_request:
-    types: [opened, synchronize, reopened, ready_for_review]
-  # workflow_dispatch:
+    branches: ['v3', 'v3*']
+    types: [opened, synchronize, reopened]
+    paths:
+      - apps/**
+      - packages/**
 
 env:
   REGISTRY: ghcr.io
 
 jobs:
   cypress-run:
-    if: github.event.pull_request.draft == false
     # runs-on: self-hosted
     runs-on: ubuntu-latest
     services:
