--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "9.1.2",
     "copy-webpack-plugin": "11.0.0",
     "eslint": "8.45.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-office-addins": "2.1.5",
     "eslint-plugin-react": "7.32.2",
     "file-loader": "6.2.0",
@@ -41,7 +42,6 @@
     "office-addin-dev-certs": "1.11.4",
     "office-addin-lint": "2.2.5",
     "office-addin-manifest": "1.12.4",
-    "office-addin-prettier-config": "1.2.0",
     "os-browserify": "0.3.0",
     "postcss": "8.4.41",
     "process": "0.11.10",
