--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "dev:migration": "doppler run --config dev -- turbo run dev:migration",
     "dev:offline": "doppler run --config dev -- turbo run dev:offline",
     "dev:test": "cross-env NODE_ENV=test turbo run dev:test",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
+    "format": "prettier --write . --config .prettierrc.mjs",
+    "format:check": "prettier --check . --config .prettierrc.mjs",
     "lint": "turbo run lint --parallel --continue",
     "prepare": "husky install",
     "prisma:deploy": "pnpm run --filter @klicker-uzh/prisma prisma:deploy",
