fix: LTI login should be working with cookies and session storage (#4220)

--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -18,11 +18,11 @@
     "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
-    "@types/node": "^20.12.13",
+    "@types/node": "^20.16.1",
     "@types/office-js": "^1.0.256",
     "@types/office-runtime": "^1.0.23",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.0.0",
     "@types/webpack-dev-server": "^4.1.0",
     "acorn": "8.8.2",
@@ -30,6 +30,7 @@
     "babel-loader": "9.1.2",
     "copy-webpack-plugin": "11.0.0",
     "eslint": "8.45.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-office-addins": "2.1.5",
     "eslint-plugin-react": "7.32.2",
     "file-loader": "6.2.0",
@@ -41,7 +42,6 @@
     "office-addin-dev-certs": "1.11.4",
     "office-addin-lint": "2.2.5",
     "office-addin-manifest": "1.12.4",
-    "office-addin-prettier-config": "1.2.0",
     "os-browserify": "0.3.0",
     "postcss": "8.4.41",
     "process": "0.11.10",
