--- a/apps/frontend-manage/.env.development
+++ b/apps/frontend-manage/.env.development
@@ -9,3 +9,4 @@ NEXT_PUBLIC_PWA_URL="http://pwa.klicker.com"
 NEXT_PUBLIC_MANAGE_URL="http://manage.klicker.com"
 NEXT_PUBLIC_CONTROL_URL="http://control.klicker.com"
 NEXT_PUBLIC_AUTH_URL="http://auth.klicker.com"
+NEXT_PUBLIC_LTI_URL="http://lti.klicker.com"
