--- a/apps/frontend-manage/.env.qa
+++ b/apps/frontend-manage/.env.qa
@@ -9,3 +9,4 @@ NEXT_PUBLIC_PWA_URL="https://pwa.klicker-qa.bf-app.ch"
 NEXT_PUBLIC_MANAGE_URL="https://manage.klicker-qa.bf-app.ch"
 NEXT_PUBLIC_CONTROL_URL="https://control.klicker-qa.bf-app.ch"
 NEXT_PUBLIC_AUTH_URL="https://auth.klicker-qa.bf-app.ch"
+NEXT_PUBLIC_LTI_URL="https://lti.klicker-qa.bf-app.ch"
