--- a/turbo.json
+++ b/turbo.json
@@ -4,6 +4,8 @@
     "API_DOMAIN",
     "APP_CONTROL_DOMAIN",
     "APP_CONTROL_SUBDOMAIN",
+    "APP_LTI_DOMAIN",
+    "APP_LTI_SUBDOMAIN",
     "APP_MANAGE_DOMAIN",
     "APP_MANAGE_SUBDOMAIN",
     "APP_STUDENT_DOMAIN",
