--- a/apps/frontend-manage/.env.test
+++ b/apps/frontend-manage/.env.test
@@ -9,3 +9,4 @@ NEXT_PUBLIC_PWA_URL="http://127.0.0.1:3001"
 NEXT_PUBLIC_MANAGE_URL="http://127.0.0.1:3002"
 NEXT_PUBLIC_CONTROL_URL="http://127.0.0.1:3003"
 NEXT_PUBLIC_AUTH_URL="http://127.0.0.1:3010"
+NEXT_PUBLIC_LTI_URL="http://127.0.0.1:4000"
