--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,22 +4,22 @@
   "version": "3.2.0-alpha.12",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@docusaurus/core": "3.0.0-alpha.0",
-    "@docusaurus/module-type-aliases": "3.0.0-alpha.0",
-    "@docusaurus/plugin-client-redirects": "3.0.0-alpha.0",
-    "@docusaurus/plugin-ideal-image": "3.0.0-alpha.0",
-    "@docusaurus/preset-classic": "3.0.0-alpha.0",
-    "@docusaurus/theme-classic": "3.0.0-alpha.0",
-    "@docusaurus/theme-common": "3.0.0-alpha.0",
-    "@docusaurus/tsconfig": "*",
+    "@docusaurus/core": "3.5.2",
+    "@docusaurus/module-type-aliases": "3.5.2",
+    "@docusaurus/plugin-client-redirects": "3.5.2",
+    "@docusaurus/plugin-ideal-image": "3.5.2",
+    "@docusaurus/preset-classic": "3.5.2",
+    "@docusaurus/theme-classic": "3.5.2",
+    "@docusaurus/theme-common": "3.5.2",
+    "@docusaurus/tsconfig": "3.5.2",
+    "@docusaurus/types": "3.5.2",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "6.4.2",
     "@fortawesome/free-regular-svg-icons": "6.6.0",
     "@fortawesome/free-solid-svg-icons": "6.6.0",
     "@fortawesome/react-fontawesome": "0.2.2",
     "@gabrielcsapo/docusaurus-plugin-matomo": "0.1.2",
-    "@mdx-js/react": "2.3.0",
-    "@tsconfig/docusaurus": "1.0.5",
+    "@mdx-js/react": "3.0.1",
     "@uzh-bf/design-system": "3.0.0-alpha.22",
     "autoprefixer": "10.4.14",
     "cross-env": "7.0.3",
