--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -68,6 +68,7 @@
     "ioredis": "5.3.2",
     "jest": "29.5.0",
     "npm-run-all": "4.1.5",
+    "ts-jest": "29.1.0",
     "nyc": "15.1.0",
     "size-limit": "8.2.4",
     "source-map-support": "0.5.21",
@@ -94,7 +95,8 @@
     "generate": "graphql-codegen --config codegen.ts",
     "script": "ENV=development doppler run --config dev -- tsx",
     "script:prod": "ENV=production doppler run --config prd -- tsx",
-    "size": "size-limit"
+    "size": "size-limit",
+    "test": "jest"
   },
   "engines": {
     "node": "=20"
