--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -32,6 +32,7 @@
     "node-schedule": "2.1.1",
     "nodemailer": "6.9.14",
     "ramda": "0.29.0",
+    "unique-names-generator": "4.7.1",
     "uuid": "9.0.1",
     "validator": "13.11.0",
     "zod": "3.21.4"
@@ -68,10 +69,10 @@
     "ioredis": "5.3.2",
     "jest": "29.5.0",
     "npm-run-all": "4.1.5",
-    "ts-jest": "29.1.0",
     "nyc": "15.1.0",
     "size-limit": "8.2.4",
     "source-map-support": "0.5.21",
+    "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
     "tsup": "7.2.0",
