--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -39,6 +39,7 @@
     "nookies": "2.5.2",
     "ramda": "0.29.0",
     "react": "18.3.1",
+    "react-csv-downloader": "3.1.0",
     "react-d3-speedometer": "2.1.0-rc.0",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
