--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -18,6 +18,7 @@
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@socialgouv/matomo-next": "1.6.1",
+    "@tanstack/react-table": "8.20.5",
     "@uzh-bf/design-system": "3.0.0-alpha.27",
     "d3": "7.8.4",
     "dayjs": "1.11.12",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/forms": "0.5.4",
     "@tailwindcss/typography": "0.5.9",
     "@types/d3": "^7.4.0",
