--- a/packages/graphql/tsconfig.json
+++ b/packages/graphql/tsconfig.json
@@ -27,6 +27,7 @@
     "composite": false,
     "declarationMap": true,
     /* If your code doesn't run in the DOM: */
-    "lib": ["es2022"]
+    "lib": ["es2022"],
+    "noErrorTruncation": true
   }
 }
