chore(deploy): update replica counts

--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -111,6 +111,8 @@ releases:
           sentryDSN: '{{ env "SENTRY_DSN" }}'
 
         lti:
+          replicaCount: 4
+
           image:
             tag: '{{ requiredEnv "APP_VERSION" }}'
 
